commit-10: Setup backend & error handling
