# controllers/feedController.js
@@ -1,54 +1,70 @@
-const path = require("path");
 const { validationResult } = require("express-validator/check");
 
-const {
-  HTTP_OK,
-  HTTP_CREATED,
-  HTTP_VALIDATION_FAILED,
-} = require("../common/constants");
+const Post = require("../models/postModel");
+
+const constants = require("../common/constants");
 const { getBaseURL } = require("../common/utilities");
 
 exports.getPosts = (req, res, next) => {
   // .json will set "Content-Type":"application/json" response header
-  res.status(HTTP_OK).json({
-    posts: [
-      {
-        title: "First post",
-        content: "This is first post!",
-        imageUrl: getBaseURL(req) + "/images/avatar-female.jpg",
-        creator: {
-          name: "Rahul Pol",
-        },
-        createdAt: new Date(),
-      },
-    ],
-  });
+  Post.find()
+    .then((posts) => {
+      res.status(constants.HTTP_OK).json(posts);
+    })
+    .catch((err) => {
+      if (!err.statusCode) {
+        err.statusCode = constants.HTTP_INTERNAL_SERVER_ERROR;
+      }
+      next(err);
+    });
+
+  // res.status(constants.HTTP_OK).json({
+  //   posts: [
+  //     {
+  //       title: "First post",
+  //       content: "This is first post!",
+  //       imageUrl: getBaseURL(req) + "/images/avatar-female.jpg",
+  //       creator: {
+  //         name: "Rahul Pol",
+  //       },
+  //       createdAt: new Date(),
+  //     },
+  //   ],
+  // });
 };
 
 exports.createPost = (req, res, next) => {
   const errors = validationResult(req);
   if (!errors.isEmpty()) {
-    return res.status(HTTP_VALIDATION_FAILED).json({
-      message: " Validation failed. Entered data is incorrect! ",
-      errors: errors.array(),
-    });
+    let error = new Error("Validation failed. Entered data is incorrect! ");
+    error.statusCode = constants.HTTP_VALIDATION_FAILED;
+    error.errors = errors.array();
+    throw error;
   }
 
   const title = req.body.title;
   const content = req.body.content;
-
-  //TODO: create a post in Db
-  res.status(HTTP_CREATED).json({
-    message: "Post created successfully!",
-    post: {
-      _id: new Date().toISOString(),
-      title,
-      content,
-      imageUrl: getBaseURL(req) + "/images/avatar-female.jpg",
-      creator: {
-        name: "Rahul Pol",
-      },
-      createdAt: new Date(),
+  const post = new Post({
+    title,
+    content,
+    imageUrl: getBaseURL(req) + "/images/avatar-female.jpg",
+    creator: {
+      name: "Rahul Pol",
     },
   });
+  post
+    .save()
+    .then((result) => {
+      console.log(result);
+      res.status(constants.HTTP_CREATED).json({
+        message: "Post created successfully!",
+        post: result,
+      });
+    })
+    .catch((err) => {
+      if (!err.statusCode) {
+        err.statusCode = constants.HTTP_INTERNAL_SERVER_ERROR;
+      }
+      next(err);
+    });
 };
